--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ input:focus, select:focus {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #28a745;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -66,7 +66,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #218838;
 }
 
 #result {
